# STAG-SETUP

./: .env_example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  main.py  settings.py  ticket.py
app/routers/: home.py
app/templates/: 401.html  404.html  home.html  index.html  login.html
templates/: 404.html  home.html  index.html
